# numrst

./: Cargo.toml  README.md  a.npy
data/npy/: test1.npz  test3.npy  test5.npy
data/nrst/: test1.nrst  test2.nrst
examples/: arithmetic.rs  broadcasting.rs  construct.rs  create.py  create.rs  exclusive-traits.rs  index.py  index.rs  indexing.rs  linalg.py  linalg.rs  logic.rs  lu.py  matmul.rs  npy.rs  nrst.rs  ops.rs  reductions.rs  save.py  save.rs  shape.rs  t.py  test.py  view.rs
src/: error.rs  lib.rs  prelude.rs
src/core/: dtype.rs  layout.rs  matrix.rs  mod.rs  shape.rs  storage.rs  vector.rs
src/core/dtype/: bool.rs  f32.rs  f64.rs  i16.rs  i32.rs  i8.rs  mod.rs  u16.rs  u32.rs  u8.rs  usize.rs
src/core/ndarray/: arith.rs  binary_op.rs  broadcast.rs  condition.rs  construct.rs  convert.rs  create.rs  display.rs  indexer.rs  iter.rs  matmul.rs  mod.rs  ops.rs  reduce.rs  shape.rs  unary_op.rs
src/core/view/: cube.rs  matrix.rs  mod.rs  usafe.rs  vector.rs
src/core/view/usafe/: matrix.rs  mod.rs  vector.rs
src/format/: mod.rs  npy.rs  nrst.rs  utils.rs
src/io/: mod.rs  npy.rs  nrst.rs  utils.rs
src/linalg/: basic.rs  decomposition.rs  det.rs  error.rs  inv.rs  lu.rs  mod.rs  norm.rs  solve.rs
src/linalg/decompose/: bidiagonal.rs  cholesky.rs  eig.rs  lu.rs  mod.rs  qr.rs  svd.rs
src/linalg/solve/: cholesky.rs  lu.rs  mod.rs  qr.rs  utils.rs
