[package]
name = "numrst"
version = "0.1.0"
edition = "2024"
keywords = ["scientific-computing", "math", "n-dim-array"]
description = "Fundamental package for scientific computing"
repository = "https://github.com/MoleSir/numrst.git"
license = "MIT"

[dependencies]
approx = "0.5.1"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
thiserror = "2.0.16"
