[package]
name = "numrst"
version = "0.4.0"
edition = "2024"
keywords = ["scientific-computing", "math", "n-dim-array"]
description = "Fundamental package for scientific computing"
repository = "https://github.com/MoleSir/numrst.git"
license = "MIT"

[dependencies]
approx = "0.5.1"
bytemuck = "1.23.2"
derive_builder = "0.20.2"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
tempfile = "3.21.0"
thiserror = "2.0.16"
zip = "4.5.0"
